tests/sksl/errors/MatrixInlinedIndexOutOfRange.glsl
### Compilation failed:

error: 11: index -1 out of range for 'float3x3'
error: 11: index 3 out of range for 'float3x3'
2 errors
